fix(ui): fix item wrapping issue at around 540px viewport width

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ body {
 }
 
 .title {
+  width: 100%;
   text-align: center;
   font-size: var(--fs-3xl);
   font-weight: var(--fw-bold);
